	* Requires TYPO3 4.5+
	* Resolves #51950: Deprecation Message t3lib_htmlmail->t3lib_htmlmail()
	* Follow-up to #50838: Non existing token crashes site
	* Initialize $GLOBALS['TCA']['fe_users']['feInterface'] when not set (TYPO3 6.2)
	* Remove usage of tx_div2007_alpha_language_base
	* Require php 5.3+ and enable in TYPO3 6.2
	* Fix usage of methods deprecated in TYPO3 6.2

2013-08-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission (Thanks to Roland Schenke)

2013-08-08 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix text in static template constants
	* Fix issue #50934: Security Ticket #2013011810000038

2013-07-04 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Revert fix issue #39429: usergroups outside pid not saved in edit / invite mode

2013-07-02 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix dates in change log
	* Follow-up to t3lib_div::intval_positive not available in TYPO3 6.0 in tx_srfeuserregister_data
	* Fix issue #39429: usergroups outside pid not saved in edit / invite mode
	* Ensure the data array is always an array

2013-07-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix bug #41827: enableAdminNotifyOnUpdate=1 produces wrong dmailCategories values in E-Mail
	* Fix bug #44151: ###BACK_URL### not working, looses Parameters and possible wrong character encoding
	* Fix bug #41321: Clicking cancel on the account deletion confirmation pages causes a 404 error with internet explorer
	* Fix bug #46429: Empty Form after cancelling delete Form
	* Fix issue #49426: addGlobalMarkers: wrong conditions
	* Fix issue #37022: Empty form security token
	* Fix issue #39069: Check pid of fe-users in function login (Thanks to Georg Schönweger)
	* Fix issue with confirmType in setfixed url
	* Correct function name in tx_srfeuserregister_setfixed->computeUrl
	* Fix issue #37046: JavaScript for updateForm() doesn't respect formFields setting